2009-06-18  David Sedeño <david@alderia.com>

        * src/main_window_cb.c (on_md5ok_button_clicked): 
        Make the markup work again. Remove from the traduction str.
        
2009-06-17  David Sedeño <david@alderia.com>

	* src/main_window_cb.c: Remove gnome_vfs and use gio 
	in md5sum comprobation.

2009-06-16  David Sedeño <david@alderia.com>

	* src/main_window_cb.c: Remove gnome-vfs from two functions.

2009-06-15  David Sedeño <david@alderia.com>

	* src/utils.{c,h}: Clean up run_dialog_information and run_dialog_error. Thanks to 
	Jaroslav Imrich <jaroslav.imrich@gmail.com> for the patch.

2009-06-01  David Sedeño <david@alderia.com>

	* src/gwget-application-service.xml, src/gwget-application.{c,h}: 
	Map the openuriwithdest api call to another funcion. 

2009-05-31  David Sedeño <david@alderia.com>

	* src/main.c, src/gwget-application-service.xml: Add OpenURIDest call to 
	Dbus so that OpenURI doesn't break external programs that use Dbus API. 
	Fix: #583929
  
2009-02-18  David Sedeño <david@alderia.com>

	* configure.ac: Fix typo for epiphany version 2.26 (Götz Waschk).
	* data/gwget.desktop.in.in: Fix icon and category. Fix bug #572280.
	Thanks to  Götz Waschk.

2009-02-17  David Sedeño <david@alderia.com>

	* configure.ac: Version 1.0.1
	* NEWS: news for 1.0.1

2009-02-15  David Sedeño <david@alderia.com>
	
	* src/gwget_data.h: don't make gwget_pref be extern (fix the epiphany
	extension)
	* epiphany-extension/ephy-gwget-extension.c: Send the destination dir
	var in the call to gwget.
	* epiphany-extension/gwget.xml.in.in: Set author and url.
	* epiphany-extension/Makefile.am: Include @GNOME_CFLAGS@ 
	to INCLUDE_CFLAGS so it can find libgnomeui.h. Fix bug #571790.
	* configure.ac: Detects Epiphany > 2.18. Patch from 
	Christoph Wickert. Fix bug #571789.
	* Changelog: Convert to UTF-8

2009-02-12  David Sedeño <david@alderia.com>

	* NEWS: news for 1.00
	* configure.ac: Bump version to 1.00
	* configure.ac: Require gio and not gnome-vfs.